# fiber-ml-project

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CONTEXT.md  CONTRIBUTORS.md  LICENSE  README.md  SETUP_NEXT_STEPS.md  dvc.yaml  params.yaml  pyproject.toml  ruff.toml
.dvc/: config
.github/workflows/: ci.yml  pre-commit.yml
data/: README.md  manifest.csv  raw.dvc
data/reference/: zakres_odpowiedzi_czujnika.tif
data/sample/T35_RH20/: Pomiar1.txt  Pomiar3.txt
docs/: data_format.md
docs/decisions/: 0001-zarr-over-hdf5.md
docs/project/: opis_pomiarow_ML.txt
docs/references/: README.md
notebooks/: 00_explore_sample.ipynb  README.md
scripts/: 01_build_manifest.py  02_ingest_to_zarr.py  03_eda_report.py  04_train_baseline.py  99_smoke_test.py  download_from_hf.py  upload_to_hf.py
src/fiber_ml/: __init__.py
src/fiber_ml/eda/: __init__.py  plots.py
src/fiber_ml/eval/: __init__.py  metrics.py
src/fiber_ml/features/: __init__.py  aggregated.py
src/fiber_ml/ingest/: __init__.py  manifest.py  parser.py  to_zarr.py
src/fiber_ml/models/: __init__.py  baseline.py  splits.py
src/fiber_ml/preprocessing/: __init__.py  channels.py
src/fiber_ml/utils/: paths.py
tests/: conftest.py  test_baseline_and_metrics.py  test_channels.py  test_features_aggregated.py  test_manifest.py  test_parser.py  test_splits.py
