[project]
name = "fiber-ml-project"
version = "0.1.0"
description = "Fiber optic sensor ML project — Luna OBR-4600 temperature and humidity modeling"
requires-python = ">=3.11"
dependencies = [
    # core data
    "numpy>=1.26",
    "pandas>=2.1",
    "zarr>=2.16,<3.0",
    "xarray>=2024.1",
    "dask[complete]>=2024.1",
    "numcodecs>=0.12,<0.13",
    # ML
    "scikit-learn>=1.4",
    "torch>=2.2",
    "lightgbm>=4.3",
    # DVC
    "dvc[gdrive]>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas-stubs>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fiber_ml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
